--- a/admin/angular.json
+++ b/admin/angular.json
@@ -106,6 +106,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "admin:build:production",
+            "firebaseProject": "bruxism-87ee3",
+            "firebaseHostingSite": "bruxism-87ee3"
+          }
         }
       }
     }
