--- a/admin/package.json
+++ b/admin/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.0",
+    "@angular/animations": "^13.3.8",
     "@angular/cdk": "^13.3.6",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.4.0",
+    "ngx-toastr": "^14.3.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
