--- a/admin/package.json
+++ b/admin/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.4.0",
+    "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.3.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.5.0",
