--- a/admin/package.json
+++ b/admin/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@swimlane/ngx-charts": "^20.1.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.4.0",
     "ngx-pagination": "^5.1.1",
