--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@swimlane/ngx-charts": "^20.1.0",
+    "angular-csv-ext": "^1.0.5",
     "bootstrap": "^5.1.3",
     "firebase": "^9.4.0",
     "ngx-pagination": "^5.1.1",
