--- a/admin/package.json
+++ b/admin/package.json
@@ -30,7 +30,8 @@
     "angular-csv-ext": "^1.0.5",
     "bootstrap": "^5.1.3",
     "firebase": "^9.4.0",
-    "ngx-pagination": "^5.1.1",
+    "ngx-csv": "^0.3.2",
+    "ngx-pagination": "^6.0.2",
     "ngx-toastr": "^14.3.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.5.0",
