--- a/admin/package.json
+++ b/admin/package.json
@@ -28,8 +28,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@swimlane/ngx-charts": "^20.1.0",
     "angular-csv-ext": "^1.0.5",
+    "angular-datatables": "15.0.0",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
     "firebase": "^9.4.0",
+    "jquery": "^3.6.0",
     "ngx-csv": "^0.3.2",
     "ngx-pagination": "^6.0.2",
     "ngx-toastr": "^14.3.0",
@@ -42,7 +47,9 @@
     "@angular-devkit/build-angular": "^14.2.0",
     "@angular/cli": "^14.2.0",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
