--- a/admin/package.json
+++ b/admin/package.json
@@ -10,43 +10,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/cdk": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/fire": "7.4.1",
-    "@angular/forms": "^14.2.0",
-    "@angular/material": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/animations": "^15.1.2",
+    "@angular/cdk": "^15.1.2",
+    "@angular/common": "^15.1.2",
+    "@angular/compiler": "^15.1.2",
+    "@angular/core": "^15.1.2",
+    "@angular/fire": "7.5.0",
+    "@angular/forms": "^15.1.2",
+    "@angular/material": "^15.1.2",
+    "@angular/platform-browser": "^15.1.2",
+    "@angular/platform-browser-dynamic": "^15.1.2",
+    "@angular/router": "^15.1.2",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@schematics/angular": "^15.1.3",
     "@swimlane/ngx-charts": "^20.1.0",
     "angular-csv-ext": "^1.0.5",
+    "angular-database": "^1.0.1",
     "angular-datatables": "^15.0.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.3",
     "datatables.net": "^1.13.1",
-    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-bs5": "^1.13.1",
     "datatables.net-dt": "^1.13.1",
     "firebase": "^9.4.0",
     "jquery": "^3.6.3",
     "ngx-csv": "^0.3.2",
     "ngx-pagination": "^6.0.2",
-    "ngx-toastr": "^14.3.0",
+    "ngx-toastr": "^16.0.2",
     "rxfire": "^6.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.0",
-    "@angular/cli": "^14.2.0",
-    "@angular/compiler-cli": "^14.2.0",
+    "@angular-devkit/build-angular": "^15.1.3",
+    "@angular/cli": "^15.1.3",
+    "@angular/compiler-cli": "^15.1.2",
     "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.16",
@@ -57,6 +59,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.9.4"
   }
 }
